# medicalAI

./: .gitignore  README.md  docker-compose.yml  launch.sh  todo.md
api/: .env  .env.docker  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/auth/: alembic.ini
api/auth/docker/: docker-compose.yml
api/auth/src/: crud.py  models.py  utils.py
api/auth/src/alembic/: env.py
api/auth/src/api/: deps.py  main.py
api/auth/src/core/: config.py  db.py  security.py
api/auth/src/tests/: conftest.py
api/db/api/: main.py
api/db/api/routes/: agent.py  chat.py  fhir.py  patient.py
api/db/core/: config.py
api/db/core/r4/: file.md  parser.py  test_r4_parser.py
api/db/docker/: docker-compose.yml
api/db/models/: common.py  gennet_types.py  req.py  res.py  schema.py
api/db/pipeline/: allergyintolerance.py  appointment.py  chat.py  condition.py  diagnosticreport.py  documentreference.py  encounter.py  immunization.py  medicationrequest.py  observation.py  patient.py  person.py  procedure.py  vitals.py
api/db/pipeline/tests/: test_allergy_intolerance.py  test_appointment.py  test_chat.py  test_condition.py  test_diagnostic_report.py  test_document_reference.py  test_encounter.py  test_immunization.py  test_medication_request.py  test_observation.py  test_patient.py  test_person.py  test_procedure.py  test_vitals.py
api/db/pipeline/utils/: base_pipeline.py  cursor.py  exception_handler.py  filter.py  paginate.py  runner.py  test_utils.py
api/deployment/caddy/: Caddyfile
api/deployment/scripts/: test.sh
api/h2ogpt/: .gitignore  README.md
api/h2ogpt/app/: Dockerfile  main.py
api/h2ogpt/app/api/: main.py
api/h2ogpt/app/core/: config.py  (+2 more)
(+350 files in other folders)
